--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   provider: ^6.1.1
   sqflite: ^2.3.0
   path: ^1.8.3
+  google_fonts: ^6.1.0
+  qr_code_scanner: ^1.0.1
 
 dev_dependencies:
   flutter_test:
