feat: youtube_player_iframe added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   path: ^1.8.3
   google_fonts: ^6.1.0
   qr_code_scanner: ^1.0.1
+  youtube_player_iframe: ^4.0.4
 
 dev_dependencies:
   flutter_test:
