--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  provider: ^6.1.1
+  flutter_modular: ^6.3.3
   sqflite: ^2.3.0
   path: ^1.8.3
   google_fonts: ^6.1.0
