--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_modular: ^6.3.3
   sqflite: ^2.3.0
+  synchronized: ^3.1.0+1
   path: ^1.8.3
   google_fonts: ^6.1.0
   qr_code_scanner: ^1.0.1
