--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_fonts: ^6.1.0
   qr_code_scanner: ^1.0.1
   youtube_player_iframe: ^4.0.4
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
