--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   qr_code_scanner: ^1.0.1
   youtube_player_iframe: ^4.0.4
   intl: ^0.19.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
