--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,9 +60,18 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   mobx_codegen: ^2.6.1
   build_runner: ^2.4.10
+  flutter_native_splash: ^2.4.0
+  flutter_launcher_icons: "^0.13.1"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/icon.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  remove_alpha_ios: true
 
 # The following section is specific to Flutter packages.
 flutter:
