--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,7 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# play store key
+key.properties
+app/upload-keystore.jks
