feat: config to release added

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         </intent>
     </queries>
     <application
-        android:label="librascode"
+        android:label="LibrasCode"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
